# RecipeBase

./: .coveragerc  .drone.yml  .env  .env.example  .gitignore  .pdm.toml  .pre-commit-config.yaml  Dockerfile  Dockerfile-quasar  Dockerfile.django  Dockerfile.quasar  Pipfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
RecipeBase/: asgi.py  settings.py  thumbnails_backend.py  urls.py  wsgi.py
front/: .eslintignore  .eslintrc.js  README.md  package.json  pnpm-lock.yaml  quasar.config.js  quasar.extensions.json  vitest.config.ts
front/src/: App.vue  Convert.ts  globals.d.ts
front/src-pwa/: custom-service-worker.js  manifest.json  register-service-worker.js
recipes/: admin.py  apps.py  consumers.py  imagegenerators.py  models.py  routing.py  serializers.py  services.py  signals.py  tasks.py  test_views.py  urls.py  views.py
recipes/services/: __init__.py  conditions.py  ingredients.py  measurings.py  plan_fill.py  plans.py  realtime.py  recommendations.py  stats.py  telegram.py  utils.py
recipes/tests/: factories.py  test_admin.py  test_models.py  test_services.py  test_telegram.py  test_utils.py  test_views.py
tasks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tasks/tests/: factories.py  test_models.py  test_views.py
telegram_bot/: admin.py  models.py  urls.py  views.py
telegram_bot/services/: notifications.py  search.py  telegram.py  telegram_handlers.py  utils.py
users/: admin.py  apps.py  backends.py  models.py  serializers.py  signals.py  urls.py  views.py
(+242 files in other folders)
