[tool.pdm]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "Django==3.2.6",
    "django-ckeditor==6.2.0",
    "djangorestframework==3.13.1",
    "django-filter==2.4.0",
    "django-cleanup==6.0.0",
    "drf-spectacular==0.21.2",
    "drf-writable-nested==0.6.3",
    "python-dotenv==0.20.0",
    "pillow==8.0.1",
    "psycopg2-binary==2.9.3",
]
requires-python = ">=3.11"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
